--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -23,7 +23,7 @@ jobs:
             -H "Authorization: ${{ secrets.GITHUB_TOKEN }}" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/rahiCICD/nuclei/dependency-graph/sbom)
-          echo "::set-env name=SBOM_RESPONSE::$response"
+          echo "SBOM_RESPONSE=$response" >> $GITHUB_ENV
 
       - name: Set up Python
         uses: actions/setup-python@v2
