--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.x' # Replace with the desired Python version
+          python-version: '3.7' 
 
       - name: Convert SBOM to CSV
         run: |
