--- a/v2/cmd/nuclei/templates/js/t2.yaml
+++ b/v2/cmd/nuclei/templates/js/t2.yaml
@@ -12,21 +12,15 @@ javascript:
       var response = c.ConnectSSHInfoMode(Host, 22);
      
       if (response) {
-          console.log("Banner", response.Banner);
-          console.log("ServerID", response.ServerID.Raw);
-          console.log("Server Key Exchange", JSON.stringify(response.ServerKex));
-          console.log("Algorithms Selection", JSON.stringify(response.AlgorithmSelection));
-          for (var i = 0; i < response.UserAuth.length; i++) {
-              console.log("Discovered auth", response.UserAuth[i]);
-          }
+          console.log("Banner", response.Banner,Host);
       }
-      response.UserAuth
+      dump_json(response);
+      response;
     args:
       Host: "{{Host}}"
     output: true
 
     matchers:
-      - type: word
-        part: response
-        words:
-          - "password"
+      - type: dsl
+        dsl:
+          - "print_debug(algorithm_selection)"
