--- a/v2/pkg/protocols/javascript/testcases/ssh-server-fingerprint.yaml
+++ b/v2/pkg/protocols/javascript/testcases/ssh-server-fingerprint.yaml
@@ -9,7 +9,7 @@ info:
 javascript:
   - code: |
       var m = require("nuclei/ssh");
-      var c = m.Client();
+      var c = m.SSHClient();
       var response = c.ConnectSSHInfoMode(Host, Port);
       to_json(response);
     args:
