update Port to new syntax

--- a/integration_tests/protocols/javascript/redis-pass-brute.yaml
+++ b/integration_tests/protocols/javascript/redis-pass-brute.yaml
@@ -20,7 +20,7 @@ javascript:
 
     args:
       Host: "{{Host}}"
-      Port: "{{getNetworkPort(Port,6379)}}"
+      Port: "6379"
       Password: "{{passwords}}"
 
     payloads:
