start index from 1 in flow and multiproto

--- a/v2/pkg/tmplexec/flow/testcases/nuclei-flow-dns-prefix.yaml
+++ b/v2/pkg/tmplexec/flow/testcases/nuclei-flow-dns-prefix.yaml
@@ -8,7 +8,7 @@ info:
   reference: https://example-reference-link
 
 flow: |
-  dns("0");
+  dns(1);
   template["nameservers"].forEach(nameserver => {
     set("nameserver",nameserver);
     dns("probe-ns");
