--- a/v2/pkg/tmplexec/flow/testcases/nuclei-flow-dns.yaml
+++ b/v2/pkg/tmplexec/flow/testcases/nuclei-flow-dns.yaml
@@ -8,10 +8,10 @@ info:
   reference: https://example-reference-link
 
 flow: |
-  dns("0");
+  dns(1);
   template["nameservers"].forEach(nameserver => {
     set("nameserver",nameserver);
-    dns("1");
+    dns(2);
   });
   
 dns:
