--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -22,6 +22,9 @@ jobs:
         with:
           go-version: ${{ matrix.go-version }}
 
+      - name: Set up Python   # required for running python code in py-snippet.yaml integration test
+        uses: actions/setup-python@v4
+
       - name: Check out code
         uses: actions/checkout@v3
 
