add python engine in template

--- a/integration_tests/protocols/code/py-snippet.yaml
+++ b/integration_tests/protocols/code/py-snippet.yaml
@@ -12,6 +12,7 @@ code:
   - engine:
       - py
       - python3
+      - python
     source: |
       import sys
       print("hello from " + sys.stdin.read())
