--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -24,6 +24,8 @@ jobs:
 
       - name: Set up Python   # required for running python code in py-snippet.yaml integration test
         uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
 
       - name: Check out code
         uses: actions/checkout@v3
