fix headless template

--- a/integration_tests/workflow/headless-1.yaml
+++ b/integration_tests/workflow/headless-1.yaml
@@ -6,7 +6,7 @@ info:
   tags: headless
 
 headless:
-    steps:
+    - steps:
       - action: navigate
         args:
           url: "{{BaseURL}}/headless1"
