headless: add max-duration support in waitevent

--- a/integration_tests/protocols/headless/headless-waitevent.yaml
+++ b/integration_tests/protocols/headless/headless-waitevent.yaml
@@ -12,6 +12,7 @@ headless:
       - action: waitevent
         args:
             event: 'Page.loadEventFired'
+            max-duration: 15s
   
       - action: navigate  
         args:
