--- a/integration_tests/flow/dns-ns-probe.yaml
+++ b/integration_tests/flow/dns-ns-probe.yaml
@@ -22,7 +22,7 @@ dns:
       - type: word
         words:
           - "IN\tNS"
-        # internal: true
+        internal: true
     extractors:
       - type: regex
         internal: true
