bug fix extractor: merge dynamic values, fix missing extractors in file

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,6 @@ pkg/protocols/headless/engine/.cache
 /bindgen
 /jsdocgen
 /scrapefuncs
+/integration_tests/.cache/
+/integration_tests/.nuclei-config/
+/*.yaml
