--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,6 @@ pkg/protocols/headless/engine/.cache
 /tsgen
 /scrapefuncs
 /integration_tests/.cache/
-/integration_tests/.nuclei-config/
 /*.yaml
-/pkg/protocols/headless/engine/.nuclei-config/
+**/*-config
+**/*-cache
