--- a/integration_tests/fuzz/fuzz-header-ssrf.yaml
+++ b/integration_tests/fuzz/fuzz-header-ssrf.yaml
@@ -4,26 +4,13 @@ info:
   name: Fuzz Proxy headers
   author: pdteam
   severity: info
-  description: Fuzzing Proxy headers for Potential SSRF while resetting password
+  description: Fuzzing Proxy headers for Potential SSRF
 
+# TBD method and path here should be replaced/removed since we get entire http request from file
 http:
-  - filter:
-      - type: word
-        part: all_headers
-        words:
-          - "x-forwarded-for"
-          - "x-forwarded-host"
-          - "forwarded"
-          - "x-real-ip"
-          - "x-original-url"
-          - "x-rewrite-url"
-
-      - type: word
-        part: path
-        words:
-          - "reset"
-
-    filter-condition: AND
+  - method: POST
+    path:
+      - "{{BaseURL}}"
 
     payloads:
       values:
@@ -33,6 +20,13 @@ http:
       - part: headers
         type: replace
         mode: multiple
+        keys:
+          - "x-forwarded-for"
+          - "x-forwarded-host"
+          - "forwarded"
+          - "x-real-ip"
+          - "x-original-url"
+          - "x-rewrite-url"
         fuzz:
           - '{{values}}'
 
